--- a/tulu font/style.css
+++ b/tulu font/style.css
@@ -64,18 +64,12 @@ html{
 }
 
 h1{
+    height: 5%;
 				font-family: baravu;
 				weight: 100;
 				background-color: red;
 				text-align: center;
 				color: white;
-}
-.menu{
-				
-}
-.box{
-				height: 50px;
-				width: 100px;
 }
 
 p{
@@ -106,14 +100,16 @@ div.background {
 h3{
   color: black;
   background-color: white;
-  height: 1em;
   padding: 1em 1em;
-  border: 2px solid #fff;
+  border: 2px solid red;
   text-align: center;
-  font-size: 20px;
+  height: 3%;
+  width: 100%;
+  padding: 0px;
+  font-size: 100%;
 }
 .image{
-   height: 200px;
+   height: 50px;
    left: 0;
    bottom: 0;
    position: fixed;
@@ -121,7 +117,7 @@ h3{
    padding: 1em 1em;
 }
 .big{
-  font-size: 20px;
+  font-size: 35px;
   }
  div.black{
  background-color: black;
@@ -129,7 +125,7 @@ h3{
  }
  
 .image2{
-   height: 200px;
+   height: 50px;
    right: 0;
    bottom: -1;
    position: fixed;
