--- a/tulu font/style.css
+++ b/tulu font/style.css
@@ -1,7 +1,6 @@
 @font-face{
-	font-family: 'baravu';
-        src: url(./fonts/baravu.ttf);
-	weight: 100;
+				font-family: 'baravu';
+				src: url(./fonts/Brvu.ttf);
 }
 
 div.container
@@ -21,6 +20,7 @@ div.container a
     z-index: 0;
     cursor: pointer;
     font-family: baravu;
+    font-height: 1%;
 }
 
 
@@ -56,49 +56,65 @@ div.topBotomBordersOut a:hover:before, div.topBotomBordersOut a:hover:after
 }
 
 
-head, body {
-	font-family: baravu;
+body{
+			font-family: baravu;
 }
 
-h1{
-        height: 5%;
-	font-family: baravu;
-	weight: 100;
-	background-color: red;
-	text-align: center;
-	color: white;
-}
-h1 a{
-         display:inline-block;
+
+.heading h1{
+    width: 100%;
+				font-family: baravu;
+				color: white;
+				background: url('./images/text-box-1.png');
+			 background-position: center;
+			 background-size: contain;
+			 background-repeat: no-repeat;
+			 height: 20%;
+	}
+.heading{
+   text-align: center;
+   margin: auto;
+   font-size: 100%;
 }
 
 p{
-        font-family: baravu;
-	padding: 0.5em 0.5em;
-	color: white;
+   font-family: baravu;
+				padding: 0.5em 0.5em;
+				color: white;
   	text-align: center;
   	background-color: black;
+  	font-height: 5em;
+}
+.aboutSite{
+				background-color: black;
+				color: white;
+				height: 5px;
+				right:10;
+				text-align: centre;
 }
 
+div.background {
+   background-image: url("./gifs/flag-background.mp4") 
+}
 
 #myVideo{
-	width: 100%;
-	left: 10;
-	background-color: black;
-	top: -1px;
+				width: 100%;
+				left: 10;
+				background-color: black;
 }
 h3{
-       color: black;
-       background-color: white;
-       padding: 1em 1em;
-       border: 2px solid red;
-       text-align: center;
-       height: 3%;
-       width: 100%;
-       padding: 0px;
-       font-size: 100%;
+  color: black;
+  background-color: white;
+  border: 2px solid red;
+  text-align: center;
+  width: 100%;
+  position: center;				
 }
 
+.button{
+    background-color: inherit;
+    background-width: 80%;
+ }
 .image{
    height: 50px;
    left: 0;
@@ -110,10 +126,16 @@ h3{
 .big{
   font-size: 35px;
   }
- div.black{
+ .black{
  background-color: black;
  padding: 1em 1em;
  }
+ a{
+ 				transform: rotate(5deg);
+ 				align: center;
+ 				font-size: 70px;
+ }
+ 
  
 .image2{
    height: 50px;
@@ -122,4 +144,8 @@ h3{
    position: fixed;
    z-index: 1;
    padding: 0.5em ;
+}
+
+.trial{
+			font-size: 2em;
 }
