--- a/tulu font/style.css
+++ b/tulu font/style.css
@@ -66,7 +66,7 @@ body{
 				font-family: baravu;
 				color: white;
 				background: url('./images/text-box-1.png');
-			 background-position: center;
+			 background-position: relative;
 			 background-size: contain;
 			 background-repeat: no-repeat;
 			 height: 20%;
