--- a/tulu font/style.css
+++ b/tulu font/style.css
@@ -70,7 +70,7 @@ body{
 			 background-size: contain;
 			 background-repeat: no-repeat;
 			 height: 20%;
-			align: center;
+			vertical-align: middle;
 	}
 .heading{
    text-align: center;
