--- a/tulu font/style.css
+++ b/tulu font/style.css
@@ -70,8 +70,11 @@ body{
 			 background-size: contain;
 			 background-repeat: no-repeat;
 			 height: 20%;
-			vertical-align: middle;
+			
 	}
+.heading a h1{
+	margin-top: 50%;
+}
 .heading{
    text-align: center;
    margin: auto;
