--- a/tulu font/style.css
+++ b/tulu font/style.css
@@ -72,8 +72,8 @@ body{
 			 height: 20%;
 			
 	}
-.heading a h1{
-	margin-top: 50%;
+.heading .a h1{
+	padding-top: 1.5em;
 }
 .heading{
    text-align: center;
