--- a/tulu font/style.css
+++ b/tulu font/style.css
@@ -73,10 +73,11 @@ body{
 	}
 .heading .a h1{
 	padding-top: 2.5em;
+	height: 10%;
 }
 .heading{
    text-align: center;
-   font-size: 150%;
+   font-size: 100%;
 }
 
 p{
