--- a/tulu font/style.css
+++ b/tulu font/style.css
@@ -82,12 +82,12 @@ body{
 }
 
 p{
-   font-family: baravu;
-				padding: 0.5em 0.5em;
-				color: white;
+        font-family: baravu;
+	padding: 0.5em 0.5em;
+	color: white;
   	text-align: center;
   	background-color: black;
-  	font-height: 5em;
+  	font-height: 5%;
 }
 .aboutSite{
 				background-color: black;
