--- a/tulu font/style.css
+++ b/tulu font/style.css
@@ -87,7 +87,7 @@ p{
 	color: white;
   	text-align: center;
   	background-color: black;
-  	font-height: 5%;
+  	font-size: 5%;
 }
 .aboutSite{
 				background-color: black;
