--- a/tulu font/style.css
+++ b/tulu font/style.css
@@ -144,7 +144,7 @@ h3{
 .image2{
    height: 20%;
    right: 0;
-   top: 3;
+   top: 100%;
    position: fixed;
    z-index: 1;
    padding: 0.5em ;
