--- a/tulu font/style.css
+++ b/tulu font/style.css
@@ -151,3 +151,8 @@ h3{
 .trial{
 			font-size: 2em;
 }
+@media only screen and (max-width: 600px) {
+.black{
+     background-colour: yellow;
+	}
+}
