--- a/tulu font/style.css
+++ b/tulu font/style.css
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 1000px) {
+@media only screen and (min-width: 1000px) {
 @font-face{
 				font-family: 'baravu';
 				src: url(./fonts/baravu.ttf);
