--- a/tulu font/style.css
+++ b/tulu font/style.css
@@ -111,7 +111,7 @@ h3{
   border: 2px solid red;
   text-align: center;
   width: 70%;
-  position: center;				
+  background-position: center;				
 }
 
 .button{
