--- a/tulu font/style.css
+++ b/tulu font/style.css
@@ -155,7 +155,7 @@ h3{
 	background-position: center;	
 }
 }
-@media only screen and (max-width: 600px) {
+@media only screen and (min-width: 600px) {
 	.black{
 		background-colour: yellow;
 	}
